Added the correct functionality in the ContractsServiceImpl and removed unwanted files